name: projectcompiler
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable project_compiler
    build-depends: QuickCheck -any, array -any, base -any, llvm -any,
                   llvm-base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-project_compiler
    build-depends: QuickCheck -any, array -any, base -any, llvm -any,
                   llvm-base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src